# rest-rust

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.cargo/: audit.toml
.claude/agents/: rust-expert.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
database/: init.sql
migrations/: 20250114014038_create_users_table.down.sql  20250114014038_create_users_table.up.sql  20250903030423_add_password_and_role_to_users.down.sql  20250903030423_add_password_and_role_to_users.up.sql
src/: lib.rs  main.rs
src/cmd/: cli.rs  mod.rs  server.rs
src/config/: mod.rs
src/core/: mod.rs
src/core/domain/: error.rs  mod.rs
src/core/domain/auth/: jwt.rs  mod.rs  service.rs
src/core/domain/users/: model.rs  repository.rs
src/core/rest/: mod.rs  openapi.rs  router.rs  validation.rs
src/core/rest/handler/: auth.rs  home.rs  mod.rs  response.rs  users.rs  validator.rs
src/core/rest/middleware/: auth.rs  auth_guard.rs  error_handler.rs  http_logger.rs  mod.rs
src/pkg/logger/: mod.rs
tests/: auth_integration_test.rs  cli_test.rs  response_test.rs  user_repository_test.rs  validator_test.rs
