[package]
name = "afaf-rest-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono", "postgres", "uuid"] } 
dotenv = "0.15"
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.31"
fern = "0.6"
regex = "1.11.1"
utoipa = { version = "4.2", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
validator = { version = "0.18", features = ["derive"] }
bcrypt = "0.16"
jsonwebtoken = "9.0"
actix-web-httpauth = "0.8"
thiserror = "1.0"
rand = "0.8"
